--- a/index.html
+++ b/index.html
@@ -3,57 +3,98 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Testimonial</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>Testimonial</title>
 </head>
 
 <body>
     <div class="container">
         <div class="contents-wraper">
-            <section class="header">
-                <h1>WHAT OUR FANS SAY</h1>
-            </section>
-
             <section class="testRow">
                 <div class="testItem active">
-                  <div class="slide-box">
+                    <div class="slide-box">
+                        <div class="slide-image-box">
+                            <img src="https://files.elfsightcdn.com/eafe4a4d-3436-495d-b748-5bdce62d911d/cc6e92b4-1d56-49da-b16b-f45571876245/310825712_1265587484243814_1474164385115702589_n.jpg"
+                                alt="">
+                        </div>
+                        <div class="slide-content-box">
+                            <p>What to say, that was an unexpected phone call that’s for sure . I initially thought it
+                                was a telemarketer but the boys could sniff that out, and then when they said they’re
+                                from LMCT+ </p>
+                            <div>
+                                <span>Read More</span>
 
-                  </div>
+                                <h3 class="name">Moin ahmed</h3>
+                                <h4>
+                                    CEO AT SKYBYTE AGENCY
+                                </h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="testItem ">
+                    <div class="slide-box">
+                        <div class="slide-image-box">
+                            <img src="https://files.elfsightcdn.com/eafe4a4d-3436-495d-b748-5bdce62d911d/cc6e92b4-1d56-49da-b16b-f45571876245/310825712_1265587484243814_1474164385115702589_n.jpg"
+                                alt="">
+                        </div>
+                        <div class="slide-content-box">
+                            <p>What to say, that was an unexpected phone call that’s for sure . I initially thought it
+                                was a telemarketer but the boys could sniff that out, and then when they said they’re
+                                from LMCT+ </p>
+                            <div>
+                                <span>Read More</span>
+
+                                <h3 class="name">Moin ahmed</h3>
+                                <h4>
+                                    CEO AT SKYBYTE AGENCY
+                                </h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="testItem ">
+                    <div class="slide-box">
+                        <div class="slide-image-box">
+                            <img src="https://files.elfsightcdn.com/eafe4a4d-3436-495d-b748-5bdce62d911d/cc6e92b4-1d56-49da-b16b-f45571876245/310825712_1265587484243814_1474164385115702589_n.jpg"
+                                alt="">
+                        </div>
+                        <div class="slide-content-box">
+                            <p>What to say, that was an unexpected phone call that’s for sure . I initially thought it
+                                was a telemarketer but the boys could sniff that out, and then when they said they’re
+                                from LMCT+ </p>
+                            <div>
+                                <span>Read More</span>
+
+                                <h3 class="name">Moin ahmed</h3>
+                                <h4>
+                                    CEO AT SKYBYTE AGENCY
+                                </h4>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
-                <div class="testItem">
-                    <p>
-                        “Awesome service. Elevate Marketing group really know their stuff and have
-                        really made a difference to all our social media channels.”
-                    </p>
-                </div>
 
-                <div class="testItem">
-                    <p>
-                        “Elevate Marketing group is an incredibly organised group who have handled our
-                        social media platforms to perfection in my opinion. They provide
-                        in-depth, clear plans, execute them very efficiently, and most
-                        importantly, get the results they say they’re going to get.
-                    </p>
-
-                    <p>
-                        A pleasure to work with and I would HIGHLY recommend to anyone who
-                        wants to grow their social media presence!”
-                    </p>
-                </div>
 
 
             </section>
-
+            <div class="next-prev-button">
+                <div id="prev"><i class="fa-solid fa-chevron-left"></i></div>
+                <div id="next"><i class="fa-solid fa-chevron-right"></i></div>
+            </div>
             <section class="indicators">
                 <div class="dot active" attr="0" onclick="switchTest(this)"></div>
                 <div class="dot" attr="1" onclick="switchTest(this)"></div>
                 <div class="dot" attr="2" onclick="switchTest(this)"></div>
-
             </section>
         </div>
     </div>
     <script src="./script.js"></script>
+    <script src="https://kit.fontawesome.com/253828a4b7.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
